# cbuffer

./: Cargo.toml
src/: lib.rs
tests/: array_test.rs  shared.rs  vec_test.rs
