[package]
name = "cbuffer"
version = "0.2.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2018"
description = "Low level interface to C-API's that expect a pointer/size reference to a buffer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/cbuffer.git"
keywords = ["libc", "ffi"]

[dependencies]
libc = "0.2"
uninit = "0.4"

[badges]
maintenance = { status = "actively-developed" }
